# bevy_embedded

./: .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  README.md  XCODE_SETUP.md
examples/mobile/: Cargo.toml  README.md  build_android.sh  build_ios.sh  build_rust_deps.sh
examples/mobile/bevy-embedded-android/: .gitignore  README.md  settings.gradle.kts
examples/mobile/bevy-embedded-android/app/: build.gradle.kts  proguard-rules.pro
examples/mobile/bevy-embedded-android/app/src/main/: AndroidManifest.xml
examples/mobile/bevy-embedded-android/app/src/main/java/com/example/bevyembedded/: BevyController.kt  BevyNative.kt  BevySurfaceView.kt  MainActivity.kt
examples/mobile/bevy-embedded-android/app/src/main/res/values/: strings.xml  themes.xml
examples/mobile/bevy-embedded-android/app/src/main/resources/lib/x86_64/: wrap.sh
examples/mobile/bevy-embedded-android/gradle/: libs.versions.toml
examples/mobile/src/: lib.rs
examples/mobile/test-bevy-embedded/test-bevy-embedded/: BevyMetalView.swift  ContentView.swift  libbevy_mobile_embedded_example.dylib  test_bevy_embeddedApp.swift
examples/mobile/test-bevy-embedded/test-bevy-embedded.xcodeproj/: project.pbxproj
examples/mobile/test-bevy-embedded/test-bevy-embeddedTests/: test_bevy_embeddedTests.swift
examples/mobile/test-bevy-embedded/test-bevy-embeddedUITests/: test_bevy_embeddedUITests.swift  test_bevy_embeddedUITestsLaunchTests.swift
ios/: BevyMetalView.swift
src/: android.rs  app_trait.rs  channel.rs  input.rs  ios.rs  lib.rs  plugin.rs
